--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ footer{
  <h4>Gastronomia:</h4><p> Culinária baiana é um dos grandes atrativos turísticos, com pratos marcantes como a moqueca, o acarajé, e o vatapá. <br> Os restaurantes e barracas de comida típica são atrações por si só.</p> 
 <div class="video">
     <video id="video" width="900" controls>
-        <source src="videos/Como a Bahia se tornou a potência econômica do Nordeste brasileiro..mp4" type="video/mp4">
+        <source src="Como a Bahia se tornou a potência econômica do Nordeste brasileiro..mp4" type="video/mp4">
     </video> 
 </div>   
 
