--- a/index_Principais_fontes_de_renda.html
+++ b/index_Principais_fontes_de_renda.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prinicpais Fontes de Renda</title>
-    <link rel="stylesheet" href="Css/style.css">
+    <link rel="stylesheet" href="style.css">
 
     <style>
         *{
@@ -109,14 +109,7 @@ footer p{
             padding: 8px;
 
         }
-    #img_01{
-            display: table-cell;
-            float: right;
-            clear: left;
-            overflow: auto;
-            padding-top: 10px;
-            border-radius: 40px;
-        }
+        
 
     #pr_01{
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
