--- a/index_Principais_fontes_de_renda.html
+++ b/index_Principais_fontes_de_renda.html
@@ -107,7 +107,14 @@ footer p{
     li a {
             display: block;
             padding: 8px;
-
+#img_01{
+            display: table-cell;
+            float: right;
+            clear: left;
+            overflow: auto;
+            padding-top: 10px;
+            border-radius: 40px;
+        }
         }
         
 
